<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10sp">

    <LinearLayout
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/usuario_icone"
                android:drawableLeft="@drawable/usuario_icone"
                android:drawablePadding="10sp"
                android:hint="@string/usuario_login_hint"
                android:inputType="text"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:drawableStart="@drawable/senha_icone"
                android:drawableLeft="@drawable/senha_icone"
                android:drawablePadding="10sp"
                android:hint="@string/senha_login_hint"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbManterLogado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:checked="true"
            android:text="@string/manter_conectado" />

        <Button
            android:id="@+id/btnEntrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/botao_entrar" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCadastrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cadastrar_usuario_icone"
        tools:ignore="VectorDrawableCompat" />

</android.support.constraint.ConstraintLayout>